--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@
     list-style: none;
     text-decoration: none;
 }
+
 html {
     scroll-behavior: smooth;
 }
+
 :root {
     --backblack: #2d3436;
     --darkblue: #2c3e50;
@@ -46,13 +48,15 @@ html {
     color: var(--lightyellow);
     transition: all 0.3s ease-in-out;
 }
-.hamburger-narvodaya{
+
+.hamburger-narvodaya {
     display: none;
 }
 
-.maincontainer .tp-header ul{
+.maincontainer .tp-header ul {
     position: relative;
 }
+
 .maincontainer .tp-header ul li {
     display: inline-block;
     padding: 0px 10px;
@@ -111,25 +115,28 @@ html {
     transform: translateY(50px);
     opacity: 0;
     visibility: hidden;
-    transition: all 0.3s ease-in-out ;
+    transition: all 0.3s ease-in-out;
 }
+
 .maincontainer .tp-header ul li ul li {
     display: block;
     padding: 12px 0px;
 }
+
 .maincontainer .tp-header ul li:hover ul {
     transform: translateY(10px);
     opacity: 1;
     visibility: visible;
-    transition: all 0.3s ease-in-out ;
+    transition: all 0.3s ease-in-out;
 }
+
 /* hero section */
 .hero {
     width: 100%;
     height: 100vh;
     position: relative;
     border: 1px solid black;
-    background-image: url('/NarvodyaWebsite/assets/img/mainback.jpg');
+    background-image: url('/assets/img/mainback.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -154,12 +161,13 @@ html {
     margin: 0px 0px 30px;
 }
 
-.hero .overlay .hero-cont p{
+.hero .overlay .hero-cont p {
     font-size: 15px;
     color: rgba(255, 255, 255, 0.8);
     padding: 5px 10px;
     line-height: 30px;
 }
+
 .hero .overlay .hero-cont button {
     outline: none;
     border: none;
@@ -169,14 +177,16 @@ html {
     padding: 6px 16px;
     color: black;
     border-radius: 10px;
-    transition: all 0.3s ease-in-out ;
+    transition: all 0.3s ease-in-out;
 }
-.hero .overlay .hero-cont button:hover{
+
+.hero .overlay .hero-cont button:hover {
     border: 2px solid white;
     background: none;
     color: white;
-    transition: all 0.3s ease-in-out ;
+    transition: all 0.3s ease-in-out;
 }
+
 .heading {
     text-align: center;
     padding: 20px 0px;
@@ -184,17 +194,20 @@ html {
     display: grid;
     place-items: center;
 }
-.heading h2{
+
+.heading h2 {
     width: 18%;
     padding: 0px 0px 10px 0px;
     border-bottom: 3px solid var(--lightyellow);
 }
+
 .topcourse {
     width: 100%;
     padding: 30px 0px;
     height: auto;
 }
-.topcourse .tp-coursebox{
+
+.topcourse .tp-coursebox {
     width: 100%;
     height: auto;
     display: flex;
@@ -202,31 +215,37 @@ html {
     align-items: center;
     padding: 50px 0px;
 }
+
 .leftbox {
     position: relative;
     width: 30%;
 }
+
 .leftbox img {
     /* position: absolute; */
     width: 100%;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
 }
-.rightbox{
+
+.rightbox {
     position: relative;
     width: 50%;
-} 
-.rightbox h2{
+}
+
+.rightbox h2 {
     font-size: 23px;
     padding: 20px 0px;
 }
+
 .rightbox p {
     line-height: 32px;
-    font-family:sans-serif ;
+    font-family: sans-serif;
     text-align: justify;
     padding: 10px 0px;
     color: rgba(0, 0, 0, 0.6);
 }
+
 .rightbox a {
     padding: 5px 20px;
     font-size: 17px;
@@ -237,18 +256,20 @@ html {
     color: white;
     transition: all 0.3s ease-in-out;
 }
-.rightbox a:hover{
+
+.rightbox a:hover {
     background: var(--lightyellow);
     color: black;
     font-weight: 500;
     transition: all 0.3s ease-in-out;
 }
-.topcourse .viewbtn{
+
+.topcourse .viewbtn {
     /* border: 1px solid black; */
     text-align: center;
 }
 
-.topcourse .viewbtn a{
+.topcourse .viewbtn a {
     padding: 10px 20px;
     font-size: 16px;
     background: var(--lightyellow);
@@ -257,14 +278,14 @@ html {
     transition: all 0.3s ease-in-out;
 }
 
-.topcourse .viewbtn a:hover{
+.topcourse .viewbtn a:hover {
     background: black;
     color: white;
     transition: all 0.3s ease-in-out;
 }
 
 /* Benifit Section */
-.benifits{
+.benifits {
     width: 100%;
     height: auto;
     padding: 20px 0px;
@@ -273,71 +294,81 @@ html {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.9);
 }
-.benifits .left-bnimg{
+
+.benifits .left-bnimg {
     position: relative;
     padding: 10px;
     width: 30%;
     height: 90vh;
     /* border: 1px solid black; */
 }
-.benifits .left-bnimg img{
-    position:absolute;
+
+.benifits .left-bnimg img {
+    position: absolute;
     width: 100%;
 }
-.benifits .right-bncont{
+
+.benifits .right-bncont {
     width: 60%;
     height: 100%;
     padding: 10px 15px;
 }
-.benifits .right-bncont .top-bn h3{
+
+.benifits .right-bncont .top-bn h3 {
     font-size: 0.8em;
     color: var(--lightyellow);
 }
-.benifits .right-bncont .top-bn h2{
+
+.benifits .right-bncont .top-bn h2 {
     font-size: 3em;
     color: white;
     width: 90%;
     padding: 20px 0px;
     line-height: 60px;
 }
+
 .benifits .right-bncont .benefit-list ul li {
     width: 80%;
     border: 1px solid var(--lightyellow);
     padding: 1.8em 20px;
-    margin:10px 0px ;
+    margin: 10px 0px;
     color: white;
     transition: 0.3s ease-in-out;
 }
-.benifits .right-bncont .benefit-list ul li h2{
+
+.benifits .right-bncont .benefit-list ul li h2 {
     text-transform: capitalize;
     font-weight: 400;
     padding: 10px 0px;
 }
+
 .benifits .right-bncont .benefit-list ul li p {
     font-size: 15px;
     color: rgba(255, 255, 255, 0.5);
     line-height: 30px;
 }
 
-.benifits .right-bncont .benefit-list ul li:hover{
+.benifits .right-bncont .benefit-list ul li:hover {
     background-color: var(--lightyellow);
     color: black;
     transition: 0.3s ease-in-out;
 }
+
 .benifits .right-bncont .benefit-list ul li:hover p {
     color: black;
 }
 
 /* counter success */
-.counter-success{
+.counter-success {
     margin: 40px 0px;
     width: 100%;
     height: 50vh;
-    
-    background-image: url('/NarvodyaWebsite/assets/img/counting-success.jpg');
+
+    background-image: url('/assets/img/counting-success.jpg');
     background-position: center;
     background-size: cover;
 }
+
 .counter-success .overlay {
     width: 100%;
     height: 100%;
@@ -351,13 +382,136 @@ html {
     display: inline-block;
     color: white;
 }
-.counter-success ul li .counting{
+
+.counter-success ul li .counting {
     font-size: 2.8em;
 }
 
 .counter-success ul li i {
     font-size: 2.8em;
 }
-.counter-success ul li .countpara{
+
+.counter-success ul li .countpara {
     font-size: 1.2em;
 }
+
+/* middlecarousels */
+.middlecarousels {
+    width: 75%;
+    height: auto;
+    margin: 0px auto;
+    overflow: hidden;
+}
+
+.centercarousels {
+    display: flex;
+    width: 100%;
+    margin: 0px auto;
+    height: 60vh;
+}
+
+.box-caro {
+    min-width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2d3436;
+    color: white;
+    animation: carouselani 15s infinite;
+    animation-delay: 5s;
+}
+@keyframes carouselani {
+    0% {
+        transform: translateX(0px);
+    }
+
+    33% {
+        transform: translateX(-100%);
+    }
+
+    66% {
+        transform: translateX(-200%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.box-caro h2 {
+    font-size: 2em;
+}
+
+.box-caro h2,
+.stars,
+p {
+    padding: 20px 0px;
+}
+
+.box-caro button {
+    position: relative;
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    letter-spacing: 2px;
+    cursor: pointer;
+    text-align: center;
+}
+.box-caro button ion-icon {
+    animation: movearrow .8s infinite alternate
+}
+@keyframes movearrow {
+    from{
+        transform: translateX(-10px);
+    }
+    to{
+        transform: translateX(0px);
+    }
+}
+
+.box-caro #enroll {
+    background: none;
+    border: 1px solid white;
+    color: white;
+    transition: all 0.3s ease-in-out;
+    overflow: hidden;
+}
+
+.box-caro #enroll:hover {
+    border: 1px solid transparent;
+    transform: scale(0.9);
+    transition: all 0.3s ease-in-out;
+    background-color: #fdcb6e;
+    color: black;
+}
+.box-caro .img {
+    position: relative;
+    width: 40%;
+    height: 100%;
+    cursor: pointer;
+}
+.box-caro .img img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.box-caro .img .overlayview {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    display: grid;
+    place-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease-in-out;
+}
+.box-caro .img:hover .overlayview {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.3s ease-in-out;
+}
+
