--- a/css/style.css
+++ b/css/style.css
@@ -419,9 +419,11 @@ html {
     align-items: center;
     background-color: #2d3436;
     color: white;
-    animation: carouselani 15s infinite;
+    animation: carouselani 15s infinite alternate;
     animation-delay: 5s;
 }
+
+
 @keyframes carouselani {
     0% {
         transform: translateX(0px);
@@ -515,3 +517,23 @@ p {
     transition: all 0.3s ease-in-out;
 }
 
+#coursegrid{    
+    width: 100%;
+    height: 100vh;
+    border: 1px solid black;
+    margin: 20px 0px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.boxgrid{
+    position: relative;
+    width: 35%;
+    height: auto;
+    border: 1px solid black;
+}
+
+.boxgrid img{
+    width: 30%;
+}
